--- a/public/index.html
+++ b/public/index.html
@@ -1,37 +1,53 @@
 <html>
 <head>
 <title>Chirp</title>
-<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-animate.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-aria.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-messages.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-route.min.js"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular-resource.min.js"></script>
+<script src="./bower_components/jquery/dist/jquery.js"></script>
+<script src="./bower_components/angular/angular.min.js"></script>
+<script src="./bower_components/angular-animate/angular-animate.min.js"></script>
+<script src="./bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="./bower_components/angular-aria/angular-aria.min.js"></script>
+<script src="./bower_components/angular-messages/angular-messages.min.js"></script>
+<script src="./bower_components/angular-material/angular-material.min.js"></script>
+<script src="./bower_components/angular-ui-router/release/angular-ui-router.min.js""></script>
+<script src="./bower_components/angular-resource/angular-resource.min.js"></script>
 <script src="javascripts/chirpApp.js"></script>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
-<link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
+<link rel="stylesheet" href="./bower_components/bootstrap/dist/css/bootstrap.min.css">
+<link rel="stylesheet" href="./bower_components/angular-material/angular-material.min.css">
+<link rel="stylesheet" href="./bower_components/font-awesome/css/font-awesome.min.css">
 <link rel="stylesheet" href="stylesheets/style.css">
 </head>
 <body ng-app="chirpApp">
-	<div id='main' class="container">
-		<nav class="navbar-fluid navbar-default navbar-fixed-top">
-			<div class="container">
-				<a class="navbar-brand" href="#"> Chirp! </a>
-				<p class="navbar-text">Learn the MEAN stack by building this tiny app</p>
-				<p class="navbar-right navbar-text" ng-hide="authenticated">
-					<a href="#/login">Login</a> or <a href="#/register">Register</a>
-				</p>
-				<p class="navbar-right navbar-text" ng-show="authenticated">
-					<a href="#" ng-click="signout()">Logout</a>
-				</p>
-				<p class="navbar-right navbar-text" ng-show="authenticated">Signed in as {{current_user}}</p>
-			</div>
-			<md-progress-linear md-mode="indeterminate" value="30"></md-progress-linear>
-		</nav>
-		<div class="col-md-offset-2 col-md-8">
-			<div ng-view></div>
+	<nav class="navbar-fluid navbar-default navbar-fixed-top">
+		<md-progress-linear id="site-loader" md-mode="indeterminate"></md-progress-linear>
+		<div class="container">
+			<a class="navbar-brand" href="#"> Chirp! </a>
+			<p class="navbar-text">Learn the MEAN stack by building this tiny app</p>
+			<p class="navbar-right navbar-text" ng-hide="authenticated">
+				<a href="#/login">Login</a> or <a href="#/register">Register</a>
+			</p>
+			<p class="navbar-right navbar-text" ng-show="authenticated">
+				<a href="#" ng-click="signout()">Logout</a>
+			</p>
+			<p class="navbar-right navbar-text" ng-show="authenticated">Signed in as {{current_user}}</p>
 		</div>
+	</nav>
+
+	<div class="container">
+		<div ng-view></div>
 	</div>
+
+	<footer class="footer">
+		<div class="footer-top">
+			<span><i class="fa fa-facebook-square fa-lg" aria-hidden="true"></i>&nbsp;Facebook</span> <span
+				class="footer-border"><i class="fa fa-twitter-square fa-lg" aria-hidden="true"></i>&nbsp;Twitter</span> <span
+				class="footer-border"><i class="fa fa-google-plus-square fa-lg" aria-hidden="true"></i>&nbsp;Gmail</span><span
+				class="footer-border"><i class="fa fa-envelope-square fa-lg" aria-hidden="true"></i>&nbsp;Message</span>
+		</div>
+		<div class="footer-bottom">
+			<span>Terms & conditions</span> <span class="footer-border">About swaadissht.com</span> <span
+				class="footer-border">swaadissht.com. All Rights Reserved.</span><span
+				class="footer-border">Privacy Policy</span> 
+		</div>
+	</footer>
 </body>
 </html>
